# loom

./: .gitignore  FIX_25_NOTES.md  IMPLEMENTATION_NOTES.md  README.md  REDIS_SETUP.md  changes_needed.md  instruction.md
server/: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.docker.txt  requirements.txt
server/api/: router.py
server/api/routes/: agent_memory_route.py  agent_route.py  audit_route.py  auth_route.py  chat_route.py  context_route.py  orchestration_route.py  project_route.py  shared_knowledge_route.py  theme_route.py  workspace_route.py
server/config/: __init__.py  config.py  contant.py
server/context_system/: __init__.py  ast_parser.py  cache_invalidator.py  centrality_scorer.py  db.py  domain_analyzer.py  final_scorer.py  graph_builder.py  grep_scanner.py  intent_parser.py  langgraph_node.py  models.py  payload_builder.py  project_reader.py  repo_orientator.py  repo_watcher.py  semantic_searcher.py  service.py  subgraph_partitioner.py
server/db/: chat.py  database.py  project.py  project_agent.py  user_agent.py
server/db/schema/: chat.py  (+3 more)
server/dependencies/: auth_dep.py  project_dep.py  workspace_dep.py
server/docs/: confidence_scoring_validation_workflow.md  context_output_guide.md  project_aware_context_system.md
server/graph/: builder.py  executor_node.py  file_writer_node.py  folder_structure_node.py  llm_clients.py  llm_utils.py  planner_node.py  qa_node.py  router_node.py  state.py
server/knowledge/: conflict_resolver.py  memory_embedding_service.py  memory_models.py  memory_service.py  propagator.py  reflection.py  schema.py  store.py  sync_manager.py  update_pipeline.py
server/migrations/: 000_core_app_tables.sql  001_context_system_tables.sql  20260617_confidence_scoring.sql  20260621_knowledge_learning.sql  20260621_shared_knowledge.sql  20260622_agent_memory_history.sql  20260622_semantic_memory.sql  20260624_shared_knowledge_embedding.sql  20260627_audit_ledger.sql  20260722_clerk_user_mapping.sql  20260722_seed_core_agents.sql  20260722_user_scope_existing_tables.sql
server/observability/: __init__.py  execution_logger.py
server/orchestrator/: runner.py
server/prompts/: prompts.py
server/sandbox/: config.py  fs_tools.py  manager.py  manifest.py
server/services/: knowledge_service.py  project_service.py  workspace_service.py
server/tests/: conftest.py  graph_tester.py  test_agent_memory.py  test_backend_integration.py  test_cache_invalidator.py  test_graph_builder.py  test_grep_scanner.py  test_intent_parser.py  test_knowledge_foundation.py  test_knowledge_service.py  test_payload_builder.py  test_project_reader.py  test_sandbox.py  test_semantic_searcher.py  test_shared_knowledge.py  truncate.py
server/themes/: theme_claude.md
server/tools/: file_tools.py  langgraph_tools.py
(+133 files in other folders)
