[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "dotenv>=0.9.9",
    "fastapi>=0.136.3",
    "langchain-groq>=1.1.2",
    "langgraph>=1.2.3",
    "networkx>=3.0",
    "pgvector>=0.2.0",
    "psycopg2>=2.9.12",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pydantic>=2.0",
    "redis>=5.0.0",
    "sentence-transformers>=2.2.0",
    "sqlparse>=0.5.0",
    "tree-sitter>=0.20.0",
    "tree-sitter-go>=0.20.0",
    "tree-sitter-javascript>=0.20.0",
    "tree-sitter-python>=0.20.0",
    "tree-sitter-rust>=0.20.0",
    "tree-sitter-typescript>=0.20.0",
    "uvicorn>=0.48.0",
    "watchdog>=3.0.0",
]
